# Aera

./: .gitignore  BUILD.md  CHANGELOG.md  DEPLOYMENT.md  DESKTOP.md  LICENSE  Makefile  README.md  STRUCTURE.md  aera.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: release.yml
aera_agent/: __init__.py  __main__.py  cli.py  config.py  llm.py  memory.py  paths.py  theme.py
aera_agent/audio/: __init__.py  speaker_id.py  stt_sensevoice.py  tts_omnivoice.py  tts_piper.py  wake.py
aera_agent/gui/: __init__.py  app.py  style.py  widgets.py  wizard.py  worker.py
aera_agent/gui/pages/: __init__.py  apps.py  common.py  dashboard.py  gallery.py  macros.py  phone.py  settings.py  studio.py
aera_agent/tools/: __init__.py  _http.py  clipboard_fs.py  launchers.py  math_units.py  memory_tools.py  notes_fun.py  speaker_tools.py  system.py  time_date.py  timers.py  translate.py  weather.py  web.py
build_tools/: aera.spec  aera_installer.iss  aera_onefile.spec  build.bat  build.py  build.sh  release.py  release_enhanced.yml
build_tools/wix/: aera.wxs
data/: memory.json  notes.txt
