[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name        = "aera-agent"
version     = "0.0.1"
description = "A modular voice AI assistant with agent tools, voice cloning, and long-term memory"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }
authors     = [{ name = "AERA Agent contributors" }]

dependencies = [
    "openai>=1.40",
    "SpeechRecognition>=3.10",
    "PyAudio>=0.2.13",
    "pyttsx3>=2.90",
    "PySide6>=6.6",
    "psutil>=5.9",
]

[project.optional-dependencies]
piper      = ["piper-tts>=1.2", "sounddevice>=0.4", "numpy>=1.24"]
omnivoice  = ["torch>=2.3", "torchaudio>=2.3", "transformers>=4.44",
              "sounddevice>=0.4", "numpy>=1.24"]
sensevoice = ["funasr>=1.1", "soundfile>=0.12", "sounddevice>=0.4",
              "webrtcvad>=2.0", "numpy>=1.24"]
speakerid  = ["speechbrain>=1.0", "torch>=2.3", "torchaudio>=2.3",
              "soundfile>=0.12", "sounddevice>=0.4", "numpy>=1.24"]
wake       = ["pvporcupine>=3.0"]
build      = ["pyinstaller>=6.0", "pillow>=10", "cairosvg>=2.7"]
dev        = ["pytest>=7", "ruff>=0.4", "mypy>=1.10"]

[project.scripts]
aera     = "aera_agent.__main__:main"
aera-cli = "aera_agent.cli:main"
aera-gui = "aera_agent.gui.app:main"

[tool.setuptools.packages.find]
include = ["aera_agent*", "omnivoice*"]
